# discord-bot

./: .env_example  .gitignore  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2023-07-28-19-13__846ebfe856c3.py  2023-08-09-17-01__66321ac7bf19.py
config/: settings.yml
settings/: config.py
src/: app.py
src/api/: connection.py  filters.py  query.py
src/api/definitions/: guild.py  member.py  user.py
src/bot/: events.py  main.py
src/bot/cogs/: __init__.py  games.py  test.py  utility.py
src/bot/models/: __init__.py  annotations.py  guild.py  user.py
src/db/: engine.py  utils.py
src/models/: __init__.py  guild.py  member.py  user.py
src/resolvers/: __init__.py  base.py  guild.py  member.py  user.py
